--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,15 +8,30 @@
   <title>Login</title>
   <th:block th:replace="~{fragments/header.html :: header}"></th:block>
 </head>
-<body>
+
+<style>
+  .hexBg {
+    background-image: url("/img/hex.png");
+  }
+</style>
+
+<body style="background-color: #3c5aa6">
+
+<!-- Navbar -->
 <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
+
 <div class="container mt-5">
-  <div class="row">
-    <div class="col s12 m6" style="border-radius: 10px;">
+
+  <div class="row hexBg p-5 rounded my-5 d-flex justify-content-center">
+    <div class="col-lg-6 d-flex justify-content-center align-items-center">
+      <img src="/img/register.webp" class="rounded" style="width: 100%">
+    </div>
+    <div class="col-6">
       <form class="d-flex justify-content-center" th:action="@{/register}" th:method="POST" th:object="${user}">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 100%;">
           <div class="card-body">
-            <h5 class="card-title">Register</h5>
+            <h5 class="card-title mb-0" style="color: #3c5aa6">Register</h5>
+            <hr class="mt-0 p-1" style="color: #3c5aa6">
             <div class="card-text">
               <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
@@ -32,12 +47,15 @@
               </div>
               <input type="hidden" name="roles" id="roles" value="ROLE_USER" th:field="*{roles}"/>
             </div>
-            <a href="/login" class="btn btn-secondary">Cancel</a>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <div class="d-flex justify-content-evenly">
+              <a href="/login" class="btn btn-secondary">Cancel</a>
+              <button type="submit" class="btn btn-primary">Register</button>
+            </div>
           </div>
         </div>
       </form>
     </div>
   </div>
+</div>
 </body>
 </html>
