--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <title>Users Panel</title>
     <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <style>
+        .hexBg {
+            background-image: url("/img/hex.png");
+        }
+    </style>
 </head>
-<body>
+<body class="hexBg">
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
-<div class="container">
-    <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
+
+
+<div class="container p-3 text-white rounded my-5" style="background-color: #3c5aa6">
+    <div class="navbar d-flex justify-content-end pe-3">
         <span class="h2 me-auto ms-3"><i class="bi bi-person-badge me-3"></i>Profile</span>
         <a href="/profile/settings" class="btn btn-light" style="float: right;">
             <i class="bi bi-gear me-3"></i>Profile Settings
@@ -26,8 +33,6 @@
             <!-- Points section -->
             <span th:unless="${user.totalPoints == null}" th:text="' | Total Health Points: ' + ${user.totalPoints}" />
         </div>
-
-
 
         <!-- Profile image -->
         <div class="col-12 col-md-3">
@@ -46,10 +51,10 @@
         </div>
     </div>
 
-    <div class="container" th:if="${user.followed_paths != null}">
+    <div class="container text-white" th:if="${user.followed_paths != null}">
         <ul class="list-group mt-3" style="clear: both;">
             <li class="list-group-item" th:each="item : ${user.followed_paths}">
-                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl)}"/>
+                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>
                 <span class="me-auto"><strong th:text="${item.title}"></strong></span>
                 <i class="bi bi-trash3-fill deleteBtn btn btn-warning ms-auto"   th:item="${item.getId()}"></i>
                 <i class="bi bi-pencil-fill editBtn btn btn-light me-2 ms-auto"  th:item="${item.getId()}"></i>
