--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -8,12 +8,12 @@
 <body>
   <th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
   <div class="container">
-    <form th:action="@{/user/api/v1/changePassword}" th:method="POST">
+    <form th:action="@{/changePass}" method="POST" id="changePassForm">
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Change Your Password</h5>
-          <span th:text="${param.code}"></span>
-          <span th:text="${param.email}"></span>
+          <input type="hidden" th:value="${param.code}" name="code">
+          <input type="hidden" th:value="${param.email}" name="email">
           <div class="card-text">
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
@@ -26,23 +26,30 @@
             <input type="hidden">
           </div>
           <a href="/login" class="btn btn-secondary">Cancel</a>
-          <button type="submit" id="submit" class="btn btn-primary">Register</button>
+          <button type="submit" id="btnSubmit" class="btn btn-primary">Change Password</button>
         </div>
       </div>
     </form>
   </div>
   <script>
-    const submit = document.getElementById('submit')
+    const submit = document.getElementById('btnSubmit')
     const password = document.getElementById('password')
-    const form = document.forms[0]
-    const checkPasswordEquality = () => form.elements.namedItem('password').value === form.elements.namedItem('passwordConf').value
-
+    const f = document.getElementById("changePassForm")
+    const checkPasswordEquality = () => document.getElementById('password').value === document.getElementById('passwordConf').value
+    const passwordEmpty = () => document.getElementById('password').value.length === 0
     submit.onclick = e => {
       e.preventDefault();
-      if(checkPasswordEquality()){
-        form.requestSubmit()
-      }else{
-        alert("Passwords don't match. Please fix and try again.")
+      console.log("Submit clicked")
+      console.log(checkPasswordEquality())
+      console.log(passwordEmpty())
+      try {
+        if (!checkPasswordEquality() && !passwordEmpty()) {
+          alert("Passwords don't match.")
+        }else {
+          f.submit()
+        }
+      }catch(err){
+        console.error(err)
       }
     }
   </script>
