--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -113,15 +113,7 @@
     <!-- Banner -->
     <div class="d-flex justify-content-center align-items-center my-5 p-3 row rounded" id="bannerDiv">
         <!-- Left Side Banner -->
-        <div class="col p-3 bannerDivs m-3 rounded">
-            <h4 style="color: #01295f">Welcome to Health Points Fitness!</h4>
-            <hr class="mt-0" style="color: #3c5aa6">
-            <p>The social media platform that keeps your health and fitness in mind!  Sign up today to follow your favorite fitness paths, create and complete your own custom goals, add new friends, and level up your health and fitness!</p>
-            <button id="loginBtn" type="submit" class="btn btn-primary submitBtn" style="width: 100%;">Make Your Profile Today!</button>
-        </div>
-
-        <!-- Right Side Banner -->
-        <div class="col bannerDivs m-3 p-3 rounded">
+        <div class="col-md-6 col-sm-12 bannerDivs m-3 p-3 rounded">
             <div class="banner row text-center">
                 <p style="color: black;">Improve your</p>
                 <section class="animation">
@@ -132,13 +124,31 @@
                 <p style="color: black;"> with...</p>
             </div>
             <div class="row d-flex justify-content-center align-items-center">
-                <img src="img/logo.gif" class="col-12 mb-3" style="width: 14em;">
+                <img src="/img/logo.gif" class="col-12 mb-3" style="width: 14em;">
             </div>
+        </div>
+
+        <!-- Right Side Banner -->
+        <div class="col p-3 bannerDivs m-3 rounded">
+            <h4 style="color: #01295f">Welcome to Health Points Fitness!</h4>
+            <hr class="mt-0" style="color: #3c5aa6">
+            <p>The social media platform that keeps your health and fitness in mind!  Sign up today to follow your favorite fitness paths, create and complete your own custom goals, add new friends, and level up your health and fitness!</p>
+            <button id="loginBtn" type="submit" class="btn btn-primary submitBtn" style="width: 100%;">Make Your Profile Today!</button>
         </div>
     </div>
 
     <!-- Tutorial Trigger -->
-    <button class="btn btn-primary" data-bs-target="#howTo1" data-bs-toggle="modal">Click Here for Tutorial</button>
+    <div class="d-flex justify-content-center mb-5">
+        <button class="btn btn-primary" data-bs-target="#howTo1" data-bs-toggle="modal">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="pb-1 bi bi-arrow-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg>
+            Click Here for Tutorial
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="pb-1 bi bi-arrow-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+            </svg>
+        </button>
+    </div>
 
     <!-- Paths Examples -->
     <h3 class="text-center">Paths</h3>
@@ -174,56 +184,44 @@
     <hr class="p-1 rounded" style="color: black;">
     <div class="row mb-5">
         <!-- Week High Score -->
-        <div class="col">
-            <div class="row">
-                <div class="col">
-                    <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                        <div class="card-header">
-                            <h5 class="text-center m-0" style="color: #849324">This Week</h5>
-                        </div>
-                        <div class="card-body" style="background-color: #849324">
-                            <div id="typewriter1" class="py-2"></div>
-                            <div id="typewriter2" class="py-2"></div>
-                            <div id="typewriter3" class="py-2"></div>
-                            <div id="typewriter4" class="py-2"></div>
-                        </div>
-                    </div>
+        <div class="col m-1 d-flex justify-content-center align-items-center">
+            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
+                <div class="card-header">
+                    <h5 class="text-center m-0" style="color: #849324">This Week</h5>
+                </div>
+                <div class="card-body" style="background-color: #849324">
+                    <div id="typewriter1" class="py-2"></div>
+                    <div id="typewriter2" class="py-2"></div>
+                    <div id="typewriter3" class="py-2"></div>
+                    <div id="typewriter4" class="py-2"></div>
                 </div>
             </div>
         </div>
         <!-- Month High Score -->
-        <div class="col">
-            <div class="row">
-                <div class="col">
-                    <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                        <div class="card-header">
-                            <h5 class="text-center m-0" style="color:  #849324">This Month</h5>
-                        </div>
-                        <div class="card-body" style="background-color: #849324">
-                            <div id="typewriter5" class="py-2"></div>
-                            <div id="typewriter6" class="py-2"></div>
-                            <div id="typewriter7" class="py-2"></div>
-                            <div id="typewriter8" class="py-2"></div>
-                        </div>
-                    </div>
+        <div class="col m-1 d-flex justify-content-center align-items-center">
+            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
+                <div class="card-header">
+                    <h5 class="text-center m-0" style="color:  #849324">This Month</h5>
+                </div>
+                <div class="card-body" style="background-color: #849324">
+                    <div id="typewriter5" class="py-2"></div>
+                    <div id="typewriter6" class="py-2"></div>
+                    <div id="typewriter7" class="py-2"></div>
+                    <div id="typewriter8" class="py-2"></div>
                 </div>
             </div>
         </div>
         <!-- All Time High Score -->
-        <div class="col">
-            <div class="row">
-                <div class="col">
-                    <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                        <div class="card-header">
-                            <h5 class="text-center m-0" style="color:  #849324">All Time</h5>
-                        </div>
-                        <div class="card-body" style="background-color: #849324">
-                            <div id="typewriter9" class="py-2"></div>
-                            <div id="typewriter10" class="py-2"></div>
-                            <div id="typewriter11" class="py-2"></div>
-                            <div id="typewriter12" class="py-2"></div>
-                        </div>
-                    </div>
+        <div class="col m-1 d-flex justify-content-center align-items-center">
+            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
+                <div class="card-header">
+                    <h5 class="text-center m-0" style="color:  #849324">All Time</h5>
+                </div>
+                <div class="card-body" style="background-color: #849324">
+                    <div id="typewriter9" class="py-2"></div>
+                    <div id="typewriter10" class="py-2"></div>
+                    <div id="typewriter11" class="py-2"></div>
+                    <div id="typewriter12" class="py-2"></div>
                 </div>
             </div>
         </div>
