--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <title>Admin Panel</title>
     <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <style>
+        .hexBg {
+            background-image: url("/img/hex.png");
+        }
+    </style>
 </head>
-    <body>
+
+    <body class="hexBg">
+    <!-- Navbar -->
         <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
-        <div class="container">
+
+        <div class="container bg-light p-3 rounded my-5">
             <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
                 <span class="h2 me-auto ms-3">Manage Paths</span>
                 <a href="/admin/path/createapitest" class="btn btn-light" style="float: right;">
@@ -35,6 +43,7 @@
             <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>
         </div>
         <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+
         <script>
             //Handle Delete Button Clicks
             const deleteButtons = document.getElementsByClassName('deleteBtn')
