--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -5,24 +5,47 @@
   <meta charset="UTF-8">
   <title>Users Panel</title>
   <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <style>
+        .hexBg {
+            background-image: url("/img/hex.png");
+        }
+    </style>
 <!--  <link href="/css/main.css" rel="stylesheet">-->
 </head>
-<body>
+<body class="hexBg">
+
+    <!-- Navbar -->
     <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
-    <div class="container">
+
+    <div class="container p-4 my-5 rounded bg-light" >
       <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
         <span class="h2 me-auto ms-3">Manage Goals</span>
-        <a href="/admin/path/createapitest" class="btn btn-light" style="float: right;">
-          <i class="bi bi-plus-square"></i>&nbsp;&nbsp;Add Goal
-        </a>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createGoalModal">
+              <i class="bi bi-plus-square"></i>&nbsp;&nbsp;
+              Create a Goal
+          </button>
+
+<!--        <a href="/admin/path/createapitest" class="btn btn-light" style="float: right;">-->
+<!--          Add Goal-->
+<!--        </a>-->
       </div>
 
       <ul class="list-group mt-3" style="clear: both;">
         <li class="list-group-item" th:each="item : ${goals}">
-    <!--      <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.getImageDataUrl()}"/>-->
-          <span class="me-auto"><strong th:text="${item.description}"></strong></span>
-          <i class="bi bi-trash3-fill deleteBtn btn btn-warning ms-auto" th:item="${item.getId()}"></i>
-          <i class="bi bi-pencil-fill editBtn btn btn-light me-2 ms-auto" th:item="${item.getId()}"></i>
+            <div class="row p-3">
+                <span class="col-sm-3 col-xs-12 ps-0"><strong th:text="${item.title}"></strong></span>
+                <span class="col-sm-7 col-xs-12 ps-0 mb-2"><em th:text="${item.description}"></em></span>
+                <div class="col-sm-2 col-xs-12 d-flex align-items-center p-0">
+                    <form th:action="@{/users/goals/delete/{id}(id=${item.id})}" method="post">
+                        <button type="submit" class="btn btn-warning">
+                            <i class="bi bi-trash3-fill deleteBtn ms-auto" th:item="${item.getId()}"></i>
+                        </button>
+                    </form>
+                    <i class="bi bi-pencil-fill editBtn btn btn-light me-2 ms-auto" th:title="${item.title}" th:description="${item.description}" th:completed="${item.completed}" th:id="${item.id}" th:item="${item.getId()}"></i>
+                </div>
+            </div>
+            <!--<img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.getImageDataUrl()}"/>-->
         </li>
       </ul>
 
@@ -34,6 +57,149 @@
     <!--    <li th:if="${pageNumber != totalPages - 1}" class="page-item"><a rel=".next" th:href="@{/admin/index(size=${pageSize}, page=${pageNumber + 1})}"  class="page-link">Next</a></li>-->
     <!--  </ul>-->
     </div>
+
+    <!-- Create Goal Modal -->
+    <div class="modal fade" id="createGoalModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <form th:action="@{/users/goals/add}" method="post" th:object="${goal}">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Create a Goal</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+
+                        <!--Goal Title-->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="titleLabel">Goal Title</span>
+                            <input th:field="*{title}" type="text" class="form-control" aria-label="Path Title" id="title" placeholder="Goal Title" aria-describedby="titleLabel">
+                        </div>
+
+                        <!--Goal Description-->
+                        <div class="input-group">
+                            <span class="input-group-text">Description</span>
+                            <textarea th:field="*{description}" class="form-control" aria-label="Path description" placeholder="Goal Description" id="createDescription"></textarea>
+                        </div>
+
+                        <!-- Is Complete? -->
+<!--                        <div class="form-check form-switch">-->
+<!--                            <input th:field="*{completed}" class="form-check-input" type="checkbox" role="switch" id="createCompleteSwitch">-->
+<!--                            <label class="form-check-label" for="createCompleteSwitch">Mark as complete</label>-->
+<!--                        </div>-->
+
+                        <div class="form-check">
+                            <input th:field="*{completed}" class="form-check-input" type="checkbox" id="createCompleteSwitch">
+                            <label class="form-check-label" for="createCompleteSwitch">
+                                Complete
+                            </label>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Edit Goal Modal -->
+    <div class="modal fade" id="editGoalModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <form th:action="@{/users/goals/update}" method="post" th:object="${goal}">
+                <input id="editId" type="hidden" th:value="${goal.id}" th:field="*{id}">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="editGoalLabel">Create a Goal</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+
+                        <!--Goal Title-->
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="editGoalTitleLabel">Goal Title</span>
+                            <input th:field="*{title}" type="text" class="form-control" aria-label="Goal Title" id="editTitle" placeholder="Goal Title" aria-describedby="titleLabel">
+                        </div>
+
+                        <!--Goal Description-->
+                        <div class="input-group">
+                            <span class="input-group-text">Description</span>
+                            <textarea th:field="*{description}" class="form-control" aria-label="Goal description" placeholder="Goal Description" id="editDescription"></textarea>
+                        </div>
+
+                        <!-- Is Complete? -->
+<!--                        <div class="form-check form-switch">-->
+<!--                            <input th:field="*{completed}" class="form-check-input" type="checkbox" role="switch" id="editCompleted">-->
+<!--                            <label class="form-check-label" for="editCompleted">Mark as complete</label>-->
+<!--                        </div>-->
+
+                        <div class="form-check">
+                            <input th:field="*{completed}" th:value="${goal.completed}" class="form-check-input" type="checkbox" id="editCompleted">
+                            <label class="form-check-label" for="editCompleted">
+                                Complete
+                            </label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" id="submitEdit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
     <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </body>
+
+<script>
+    const editBtns = document.getElementsByClassName("editBtn");
+    const editTitle = document.getElementById("editTitle");
+    const editDesc = document.getElementById("editDescription");
+    const editComp = document.getElementById("editCompleted");
+    const editId = document.getElementById("editId");
+    const modal = new bootstrap.Modal(document.getElementById('editGoalModal'), {})
+
+
+    Array.from(editBtns).forEach(btn => btn.onclick = e => {
+        console.log("test");
+        const newTitle = e.target.getAttribute("title");
+        const newDesc = e.target.getAttribute("description");
+        const newComp = e.target.getAttribute("completed");
+        const newId = e.target.getAttribute("id");
+
+        console.log(newTitle);
+        console.log(newDesc);
+        console.log(newComp);
+        console.log(newId);
+
+        console.log(editTitle);
+        console.log(editDesc);
+        console.log(editComp);
+        console.log(editId);
+
+        modal.show();
+
+        editComp.value = newComp;
+        editComp.checked = newComp;
+        editId.value = newId;
+
+        // editTitle.value = newTitle;
+        // editDesc.value = newDesc;
+        //
+        // console.log(newComp);
+        // editId.value = newId;
+        // console.log(editComp);
+        // editComp.checked = newComp;
+
+        // if(newComp) {
+        //     editComp.setAttribute("checked", "checked")
+        // } else {
+        //     editComp.setAttribute("checked", null);
+        // }
+    })
+
+</script>
 </html>
