--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -9,21 +9,32 @@
         .hexBg {
             background-image: url("/img/hex.png");
         }
+
+        .blueToYellow {
+            color: white;
+            background-color: #3c5aa6;
+            transition: .5s;
+        }
+        .blueToYellow:hover {
+            color: #3c5aa6;
+            background-color: #ffcb05;
+        }
     </style>
 <!--  <link href="/css/main.css" rel="stylesheet">-->
 </head>
+
 <body class="hexBg">
 
     <!-- Navbar -->
     <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 
     <div class="container p-4 my-5 rounded bg-light" >
-      <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
-        <span class="h2 me-auto ms-3">Manage Goals</span>
+      <div class="navbar bg-body-tertiary d-flex justify-content-between pe-3 row">
+        <span class="h2 me-auto ms-3 col text-center" style="color: #3c5aa6">Manage Goals</span>
           <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createGoalModal">
+          <button type="button" class="btn blueToYellow col" data-bs-toggle="modal" data-bs-target="#createGoalModal" style="width: 100px;">
               <i class="bi bi-plus-square"></i>&nbsp;&nbsp;
-              Create a Goal
+              Create Goal
           </button>
 
 <!--        <a href="/admin/path/createapitest" class="btn btn-light" style="float: right;">-->
@@ -36,13 +47,13 @@
             <div class="row p-3">
                 <span class="col-sm-3 col-xs-12 ps-0"><strong th:text="${item.title}"></strong></span>
                 <span class="col-sm-7 col-xs-12 ps-0 mb-2"><em th:text="${item.description}"></em></span>
-                <div class="col-sm-2 col-xs-12 d-flex align-items-center p-0">
+                <div class="col-sm-2 col-xs-12 d-flex justify-content-between align-items-center p-0">
+                    <i class="bi bi-pencil-fill editBtn btn btn-warning me-2" th:title="${item.title}" th:description="${item.description}" th:completed="${item.completed}" th:id="${item.id}" th:item="${item.getId()}"></i>
                     <form th:action="@{/users/goals/delete/{id}(id=${item.id})}" method="post">
-                        <button type="submit" class="btn btn-warning">
-                            <i class="bi bi-trash3-fill deleteBtn ms-auto" th:item="${item.getId()}"></i>
+                        <button type="submit" class="btn btn-danger">
+                            <i class="bi bi-trash3-fill deleteBtn" th:item="${item.getId()}"></i>
                         </button>
                     </form>
-                    <i class="bi bi-pencil-fill editBtn btn btn-light me-2 ms-auto" th:title="${item.title}" th:description="${item.description}" th:completed="${item.completed}" th:id="${item.id}" th:item="${item.getId()}"></i>
                 </div>
             </div>
             <!--<img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.getImageDataUrl()}"/>-->
