--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -6,6 +6,17 @@
     width: 48px;
     height: 48px;
     font-size: xx-large;
+    animation: glow 3s forwards infinite alternate;
+    transition: all 3s;
+}
+
+@keyframes glow {
+    from {
+        scale: 1;
+    }
+    to{
+        scale: 1.3;
+    }
 }
 
 #chat_icon:hover{
@@ -19,28 +30,28 @@
     right: 10px;
     background: lightgrey;
     border-radius: 20px;
-    transition: all;
+    transition: all 3s;
     width: 1px;
     height: 1px;
     max-width: 350px;
 }
 
 #incoming_messages{
-    height: 300px;
+    height: 320px;
     /*width: 100%;*/
     background: darkgrey;
     overflow-y: scroll;
-    padding: 8px;
+    padding: 10px;
 }
 
-#chat_controls{
-    background: red;
-    /*position: relative;*/
-    /*bottom: 0px;*/
-    /*left: 0px;*/
-    display: grid;
-    grid-template-columns: auto 40px;
-}
+/*#chat_controls{*/
+/*    background: red;*/
+/*    !*position: relative;*!*/
+/*    !*bottom: 0px;*!*/
+/*    !*left: 0px;*!*/
+/*    display: grid;*/
+/*    grid-template-columns: auto 60px;*/
+/*}*/
 
 #message{
     /*width: 92%;*/
@@ -48,6 +59,11 @@
     padding-right: 3px;
     margin-left: 8px;
     margin-right: 8px;
+    border-radius: 10px;
+    border: none;
+    user-focus: none;
+    outline: none;
+    resize: none;
 }
 
 #send{
