--- a/src/main/resources/templates/fragments/chat.html
+++ b/src/main/resources/templates/fragments/chat.html
@@ -4,16 +4,18 @@
   <th:block th:fragment="main_chat">
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-    <div id="main-chat">
+    <div id="main-chat" class="shadow-lg border">
       <input type="hidden" id="userid" th:value="${userid}"/>
       <th:block th:replace="~{/fragments/header.html :: header}"/>
       <div id="incoming_messages"></div>
-      <div class="chat_controls">
-        <div>
-          <textarea id="message" placeholder="Say something cool." required></textarea>
+      <div class="chat_controls d-flex mb-2 ms-2 me-2 mt-0">
+        <div class="col-8 pe-3">
+          <textarea class="w-100 h-100" id="message" placeholder="Say something cool." required></textarea>
         </div>
-        <div>
-          <button id="send" type="submit">Send</button>
+        <div class="col-4 d-flex justify-content-center pe-3">
+          <button id="send" type="submit" class="btn btn-primary w-100">
+            <i class="bi bi-send"></i>
+          </button>
         </div>
       </div>
     </div>
