goals page functioning besides checkbox

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -12,13 +12,13 @@
     </style>
 </head>
 
-    <body class="hexBg">
+    <body class="hexBg p-3">
     <!-- Navbar -->
         <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 
         <div class="container bg-light p-3 rounded my-5">
             <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
-                <span class="h2 me-auto ms-3">Manage Paths</span>
+                <span class="h2 me-auto ms-3" style="color: #3c5aa6">Manage Paths</span>
                 <a href="/admin/path/createapitest" class="btn btn-light" style="float: right;">
                     <i class="bi bi-plus-square"></i>&nbsp;&nbsp;Add Path
                 </a>
