--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -48,12 +48,12 @@
                 <span class="col-sm-3 col-xs-12 ps-0"><strong th:text="${item.title}"></strong></span>
                 <span class="col-sm-7 col-xs-12 ps-0 mb-2"><em th:text="${item.description}"></em></span>
                 <div class="col-sm-2 col-xs-12 d-flex justify-content-between align-items-center p-0">
-                    <i class="bi bi-pencil-fill editBtn btn btn-warning me-2" th:title="${item.title}" th:description="${item.description}" th:completed="${item.completed}" th:id="${item.id}" th:item="${item.getId()}"></i>
                     <form th:action="@{/users/goals/delete/{id}(id=${item.id})}" method="post">
-                        <button type="submit" class="btn btn-danger">
+                        <button type="submit" class="btn btn-danger m-1">
                             <i class="bi bi-trash3-fill deleteBtn" th:item="${item.getId()}"></i>
                         </button>
                     </form>
+                    <i class="bi bi-pencil-fill editBtn btn btn-warning m-1" th:title="${item.title}" th:description="${item.description}" th:completed="${item.completed}" th:id="${item.id}" th:item="${item.getId()}"></i>
                 </div>
             </div>
             <!--<img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.getImageDataUrl()}"/>-->
@@ -163,54 +163,55 @@
 
 
     <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+
+    <script>
+        const editBtns = document.getElementsByClassName("editBtn");
+        const editTitle = document.getElementById("editTitle");
+        const editDesc = document.getElementById("editDescription");
+        const editComp = document.getElementById("editCompleted");
+        const editId = document.getElementById("editId");
+        const modal = new bootstrap.Modal(document.getElementById('editGoalModal'), {})
+
+
+        Array.from(editBtns).forEach(btn => btn.onclick = e => {
+            console.log("test");
+            const newTitle = e.target.getAttribute("title");
+            const newDesc = e.target.getAttribute("description");
+            const newComp = e.target.getAttribute("completed");
+            const newId = e.target.getAttribute("id");
+
+            console.log(newTitle);
+            console.log(newDesc);
+            console.log(newComp);
+            console.log(newId);
+
+            console.log(editTitle);
+            console.log(editDesc);
+            console.log(editComp);
+            console.log(editId);
+
+            modal.show();
+
+            editComp.value = newComp;
+            editComp.checked = newComp;
+            editId.value = newId;
+
+            editTitle.value = newTitle;
+            editDesc.value = newDesc;
+
+            editId.value = newId;
+            editComp.checked = newComp;
+            console.log(editComp);
+            console.log(newComp);
+
+
+            // if(newComp) {
+            //     editComp.setAttribute("checked", "checked")
+            // } else {
+            //     editComp.setAttribute("checked", null);
+            // }
+        })
+
+    </script>
 </body>
-
-<script>
-    const editBtns = document.getElementsByClassName("editBtn");
-    const editTitle = document.getElementById("editTitle");
-    const editDesc = document.getElementById("editDescription");
-    const editComp = document.getElementById("editCompleted");
-    const editId = document.getElementById("editId");
-    const modal = new bootstrap.Modal(document.getElementById('editGoalModal'), {})
-
-
-    Array.from(editBtns).forEach(btn => btn.onclick = e => {
-        console.log("test");
-        const newTitle = e.target.getAttribute("title");
-        const newDesc = e.target.getAttribute("description");
-        const newComp = e.target.getAttribute("completed");
-        const newId = e.target.getAttribute("id");
-
-        console.log(newTitle);
-        console.log(newDesc);
-        console.log(newComp);
-        console.log(newId);
-
-        console.log(editTitle);
-        console.log(editDesc);
-        console.log(editComp);
-        console.log(editId);
-
-        modal.show();
-
-        editComp.value = newComp;
-        editComp.checked = newComp;
-        editId.value = newId;
-
-        // editTitle.value = newTitle;
-        // editDesc.value = newDesc;
-        //
-        // console.log(newComp);
-        // editId.value = newId;
-        // console.log(editComp);
-        // editComp.checked = newComp;
-
-        // if(newComp) {
-        //     editComp.setAttribute("checked", "checked")
-        // } else {
-        //     editComp.setAttribute("checked", null);
-        // }
-    })
-
-</script>
 </html>
