--- a/src/main/resources/templates/users/profilenotfound.html
+++ b/src/main/resources/templates/users/profilenotfound.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="/img/profilenotfound.png" width="100%" height="100%"/>
+    <img src="/img/profilenotfound.png" style="width: 100%"/>
   </div>
 </body>
 </html>
