--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -23,7 +23,7 @@
 <!--  <link href="/css/main.css" rel="stylesheet">-->
 </head>
 
-<body class="hexBg">
+<body>
 
     <!-- Navbar -->
     <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
