--- a/src/main/resources/templates/users/settings.html
+++ b/src/main/resources/templates/users/settings.html
@@ -4,18 +4,10 @@
     <meta charset="UTF-8">
     <title>User Settings</title>
     <th:block th:replace="~{/fragments/header.html :: header}"/>
-    <style>
-        .hexBg {
-            background-image: url("/img/hex.png");
-        }
-    </style>
 </head>
 
-<body class="hexBg">
-
-<!-- Navbar -->
+<body>
   <th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
-
   <div class="container rounded my-5 px-5 py-3 bg-light">
       <div class="navbar bg-body-tertiary mb-3">
           <a th:href="'/profile/' + ${me.username}">
