--- a/src/main/resources/templates/users/path.html
+++ b/src/main/resources/templates/users/path.html
@@ -10,26 +10,22 @@
 </head>
 <body>
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
-<div class="container">
+<div class="container bg-light">
     <div class="row">
         <div class="col-4">
             <h1 th:text="${path.getTitle()}"></h1>
         </div>
         <div class="col-6"></div>
         <div class="col-2">
-            <form action="#" th:action="@{/paths/enroll/} + ${path.getId()}" method="post">
-                <input type="submit"
-                       th:attr="class=${me.getFollowed_paths().contains(path) ? 'btn btn-danger' : 'btn btn-success'}">
-                <!--                    th:attr="value=${enrolled ? 'abandon' : 'enroll'}" -->
+            <form action="#" th:action="@{/paths/enroll/{id}(id=${path.id})}" method="post">
+                <input type="submit" th:attr="class=${me.getFollowed_paths().contains(path) ? 'btn btn-danger' : 'btn btn-success'}">
             </form>
         </div>
         <hr class="thicker_hr"/>
     </div>
     <div class="row">
         <div class="col-3">
-            <img src="#" th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge"
-                 width="256px" height="256px" class="path_image">
-            <!--                th:attr="class=${enrolled ? 'path_image_green' : 'path_image_red'}" -->
+            <img src="#" th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="256px" height="256px" class="path_image img img-thumbnail">
         </div>
         <div class="col-9">
             <div th:text="${path.getDescription()}"/>
@@ -39,71 +35,56 @@
         <div class="col-3">
             <div th:text="'Total Points for this path= ' + ${points}"/>
         </div>
-        <!--            FOR EVERY CHALLENGE IN PATH -->
-        <div th:each="challenge : ${path.getChallenges()}">
+        <div th:each="challenge : ${path.challenges}">
             <div class="col-3">
-                <div class="challengeTitle" th:text="${challenge.getTitle()}"/>
-                <!--                    FOR EVERY EXERCISE UNDER CHALLENGES -->
-                <div th:text="${challenge.getDescription()}"/>
-                <ul>
-                    <div th:each="exercise : ${challenge.getExercises()}">
-                        <li th:text="${exercise.getName()}"/>
-                        <!--            FOR EVERY CHALLENGE IN PATH -->
-                        <div class="row">
-                            <div th:each="challenge : ${path.getChallenges()}">
-                                <form action="#" th:action="@{/paths/update/} + ${path.getId()}" method="post"
-                                      th:object="${challenges}">
-                                    <div class="card">
-                                        <div class="challengeTitle" th:text="${challenge.getTitle()}"/>
-                                        <!-- FOR EVERY EXERCISE UNDER CHALLENGES -->
-                                        <div th:text="${challenge.getDescription()}"/>
-                                        <div th:each="exercise : ${challenge.getExercises()}">
-                                            <input type="checkbox" name="exercises[]" th:text="${exercise.getName()}"
-                                                   class="exerciseBox" th:exercise="${exercise.id}"
-                                                   th:checked="${enrolled.contains(exercise.getId())}">
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <input type="hidden" th:value="${me.id}" id="myId"/>
-                    <script>
-                        const myId = document.getElementById("myId").value;
-                        const exerciseBoxes = document.getElementsByClassName("exerciseBox");
-                        Array.from(exerciseBoxes).forEach(box => {
-                            box.onchange = e => {
-                                const exerciseId = box.getAttribute("exercise");
-                                const sendRequest = async () => {
-                                    try {
-                                        const token = document.getElementsByName("_csrf")[0].getAttribute("content");
-                                        const request = await fetch('http://localhost:8080/admin/api/v1/completeExercise', {
-                                            method: "POST",
-                                            credentials: "include", //Send the SpringSec credentials
-                                            headers: {
-                                                "Content-Type": "application/json",
-                                                "X-CSRF-TOKEN": token
-                                            },
-                                            body: JSON.stringify({
-                                                exerciseId: exerciseId,
-                                                completed: e.target.checked
-                                            })
-                                        })
-                                        const response = await request.json()
-                                        console.log(response);
-                                    } catch (err) {
-                                        //Display errors on the console
-                                        console.error(err)
-                                    }
-                                }
-                                if (e.target.checked) {
-                                    sendRequest();
-                                }
-                                console.log(myId);
-                                console.log(exerciseId);
-                            }
+                <div class="challengeTitle" th:text="${challenge.title}"/>
+                <div th:text="${challenge.description}"/>
+                <ul th:each="item : ${challenge.exercises}">
+                    <li>
+                        <input type="checkbox" th:checked="${item.completed}" name="exercises[]" class="exerciseBox" th:text="${item.name}" th:exercise="${item.id}"/>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<input type="hidden" th:value="${me.id}" id="myId"/>
+<script>
+    const myId = document.getElementById("myId").value;
+    const exerciseBoxes = document.getElementsByClassName("exerciseBox");
+    Array.from(exerciseBoxes).forEach(box => {
+        box.onchange = e => {
+            const exerciseId = box.getAttribute("exercise");
+            const sendRequest = async () => {
+                try {
+                    const token = document.getElementsByName("_csrf")[0].getAttribute("content");
+                    const request = await fetch('http://localhost:8080/admin/api/v1/completeExercise', {
+                        method: "POST",
+                        credentials: "include", //Send the SpringSec credentials
+                        headers: {
+                            "Content-Type": "application/json",
+                            "X-CSRF-TOKEN": token
+                        },
+                        body: JSON.stringify({
+                            exerciseId: exerciseId,
+                            completed: e.target.checked
                         })
-                    </script>
-                    <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+                    })
+                    const response = await request.json()
+                    console.log(response);
+                } catch (err) {
+                    //Display errors on the console
+                    console.error(err)
+                }
+            }
+            // if (e.target.checked) {
+            sendRequest();
+            // }
+            // console.log(myId);
+            // console.log(exerciseId);
+        }
+    })
+</script>
+<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </body>
 </html>
